--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "srart" : "node index.js"
+    "start": "node index.js"
   },
   "author": "Elliot Adderton <e.adderton@liverpool.ac.uk>",
   "license": "GPL-3.0",
